# axonos-consent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md
.github/workflows/: CI.yml  ci.yml
fuzz/fuzz_targets/: fuzz_cbor_decode.rs  fuzz_cbor_roundtrip.rs
src/: engine.rs  error.rs  frames.rs  invariants.rs  lib.rs  reason.rs  state.rs  stim_guard.rs  validate.rs
src/codec/: cbor.rs  json.rs  mod.rs
tests/: consent_interop.rs
