[package]
name = "axonos-consent"
version = "0.2.0"
edition = "2021"
authors = ["Denis Yermakou <axonosorg@gmail.com>"]
description = "MMP Consent Extension v0.1.0 — real-time consent primitive for BCI mesh coupling. Zero-alloc critical path."
license = "MIT"
repository = "https://github.com/AxonOS-org/axonos-consent"
keywords = ["bci", "consent", "mmp", "real-time", "no_std"]
categories = ["embedded", "no-std"]
readme = "README.md"

[features]
default = []
alloc = []                          # enables String/Vec in frame types (relay boundary, testing)
json = ["alloc", "dep:serde_json"]  # JSON codec requires alloc + std
std = ["json"]
stim-guard = []

[dependencies]
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
